config class SuplierEx;